--- a/notebooks/15-residual-ros.ipynb
+++ b/notebooks/15-residual-ros.ipynb
@@ -1522,7 +1522,9 @@
   {
    "cell_type": "markdown",
    "id": "0edfa803-762c-4200-b24e-08fe6ec34965",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Merge residuals with original data"
    ]
@@ -2001,9 +2003,410 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c0a9d1e-e8d5-476a-a094-0a483a745771",
+   "metadata": {},
+   "source": [
+    "## April 17, 2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20be5083-900d-4a41-9128-a75763e4fd9a",
+   "metadata": {},
+   "source": [
+    "manually examine some of the n_arms=4 rosettes that had mbs errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "83618807-2309-436e-b26d-cdb714bc27d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 11)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>a</th>\n",
+       "      <th>c</th>\n",
+       "      <th>f_r0</th>\n",
+       "      <th>f_hp</th>\n",
+       "      <th>f_h0</th>\n",
+       "      <th>n_arms</th>\n",
+       "      <th>sa</th>\n",
+       "      <th>vol</th>\n",
+       "      <th>sa_eff</th>\n",
+       "      <th>rho_eff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6000</td>\n",
+       "      <td>18.853575</td>\n",
+       "      <td>44.355912</td>\n",
+       "      <td>0.803497</td>\n",
+       "      <td>0.950749</td>\n",
+       "      <td>1.093555</td>\n",
+       "      <td>4</td>\n",
+       "      <td>44934.342645</td>\n",
+       "      <td>329883.100550</td>\n",
+       "      <td>0.362739</td>\n",
+       "      <td>0.080466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6001</td>\n",
+       "      <td>18.853575</td>\n",
+       "      <td>44.355912</td>\n",
+       "      <td>0.803497</td>\n",
+       "      <td>0.950749</td>\n",
+       "      <td>1.093555</td>\n",
+       "      <td>4</td>\n",
+       "      <td>42663.086171</td>\n",
+       "      <td>308125.528660</td>\n",
+       "      <td>0.317901</td>\n",
+       "      <td>0.066652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6002</td>\n",
+       "      <td>18.853575</td>\n",
+       "      <td>44.355912</td>\n",
+       "      <td>0.803497</td>\n",
+       "      <td>0.950749</td>\n",
+       "      <td>1.093555</td>\n",
+       "      <td>4</td>\n",
+       "      <td>45063.016730</td>\n",
+       "      <td>340197.868636</td>\n",
+       "      <td>0.345141</td>\n",
+       "      <td>0.076687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6003</td>\n",
+       "      <td>18.853575</td>\n",
+       "      <td>44.355912</td>\n",
+       "      <td>0.803497</td>\n",
+       "      <td>0.950749</td>\n",
+       "      <td>1.093555</td>\n",
+       "      <td>4</td>\n",
+       "      <td>47337.486621</td>\n",
+       "      <td>361178.174563</td>\n",
+       "      <td>0.339395</td>\n",
+       "      <td>0.073739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6004</td>\n",
+       "      <td>18.853575</td>\n",
+       "      <td>44.355912</td>\n",
+       "      <td>0.803497</td>\n",
+       "      <td>0.950749</td>\n",
+       "      <td>1.093555</td>\n",
+       "      <td>4</td>\n",
+       "      <td>45971.094763</td>\n",
+       "      <td>371909.871954</td>\n",
+       "      <td>0.389581</td>\n",
+       "      <td>0.097574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id          a          c      f_r0      f_hp      f_h0  n_arms  \\\n",
+       "0  6000  18.853575  44.355912  0.803497  0.950749  1.093555       4   \n",
+       "1  6001  18.853575  44.355912  0.803497  0.950749  1.093555       4   \n",
+       "2  6002  18.853575  44.355912  0.803497  0.950749  1.093555       4   \n",
+       "3  6003  18.853575  44.355912  0.803497  0.950749  1.093555       4   \n",
+       "4  6004  18.853575  44.355912  0.803497  0.950749  1.093555       4   \n",
+       "\n",
+       "             sa            vol    sa_eff   rho_eff  \n",
+       "0  44934.342645  329883.100550  0.362739  0.080466  \n",
+       "1  42663.086171  308125.528660  0.317901  0.066652  \n",
+       "2  45063.016730  340197.868636  0.345141  0.076687  \n",
+       "3  47337.486621  361178.174563  0.339395  0.073739  \n",
+       "4  45971.094763  371909.871954  0.389581  0.097574  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load the generated rosette data\n",
+    "data_dir = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/data-v2/'\n",
+    "file_paths = glob.glob(data_dir + \"*.txt\")\n",
+    "dfs = []\n",
+    "for file in file_paths:\n",
+    "    df = pd.read_csv(file, delimiter=\",\", header=None)\n",
+    "    dfs.append(df)\n",
+    "df = pd.concat(dfs, ignore_index=True)\n",
+    "colnames = ['id', 'a', 'c', 'f_r0', 'f_hp', 'f_h0', 'n_arms', 'sa', 'vol', 'sa_eff', 'rho_eff']\n",
+    "df.columns = colnames\n",
+    "print(df.shape)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ab08c72e-13ee-4a92-98e9-6ecf31dc6c04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>a</th>\n",
+       "      <th>c</th>\n",
+       "      <th>f_r0</th>\n",
+       "      <th>f_hp</th>\n",
+       "      <th>f_h0</th>\n",
+       "      <th>n_arms</th>\n",
+       "      <th>sa</th>\n",
+       "      <th>vol</th>\n",
+       "      <th>sa_eff</th>\n",
+       "      <th>rho_eff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [id, a, c, f_r0, f_hp, f_h0, n_arms, sa, vol, sa_eff, rho_eff]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter for mbs errors\n",
+    "df_mbs = df[df['sa']==-999]\n",
+    "df_mbs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "45f358ae-f13d-478d-be05-04e7054ef54a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>a</th>\n",
+       "      <th>c</th>\n",
+       "      <th>f_r0</th>\n",
+       "      <th>f_hp</th>\n",
+       "      <th>f_h0</th>\n",
+       "      <th>n_arms</th>\n",
+       "      <th>sa</th>\n",
+       "      <th>vol</th>\n",
+       "      <th>sa_eff</th>\n",
+       "      <th>rho_eff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8063</th>\n",
+       "      <td>63</td>\n",
+       "      <td>25.728021</td>\n",
+       "      <td>31.566006</td>\n",
+       "      <td>1.055947</td>\n",
+       "      <td>0.923524</td>\n",
+       "      <td>1.062846</td>\n",
+       "      <td>4</td>\n",
+       "      <td>57860.160238</td>\n",
+       "      <td>590772.696097</td>\n",
+       "      <td>0.516455</td>\n",
+       "      <td>0.167543</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id          a          c      f_r0      f_hp      f_h0  n_arms  \\\n",
+       "8063  63  25.728021  31.566006  1.055947  0.923524  1.062846       4   \n",
+       "\n",
+       "                sa            vol    sa_eff   rho_eff  \n",
+       "8063  57860.160238  590772.696097  0.516455  0.167543  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['id']==63]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8f5b52d3-dda7-4ca8-bd56-0abacbfdf07f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the param file that was used to create rosettes\n",
+    "params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
+    "# load saved json\n",
+    "with open(params_path, 'rb') as file:\n",
+    "    params_list = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "08392357-2cb3-4d9d-ac78-f93ecf7cb2e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[19.67777712915192,\n",
+       " 26.434891792388346,\n",
+       " 0.9227323103454409,\n",
+       " 1.1209768452345905,\n",
+       " 1.199872286962787,\n",
+       " 4]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = params_list[0]\n",
+    "base_params = params[0]\n",
+    "base_params"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07a1d30a-df52-404b-9ece-58410e379249",
+   "id": "1e055147-60c6-4840-81e5-b67c7f38fe94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate rosettes and \n",
+    "for id in df_mbs['id']:\n",
+    "    print(f'Processing ros id {id}')\n",
+    "    params = params_list[id]\n",
+    "    base_params = params[0][:5]\n",
+    "    n_arms = params[0][5]\n",
+    "    aspect_perturb = params[1]\n",
+    "    s_code = params[2]\n",
+    "    print(f'base_params before rounding: {base_params}')\n",
+    "    # reduce sigfigs\n",
+    "    base_params = [round(i, 2) for i in base_params]\n",
+    "    s_code = [round(i, 2) for i in s_code]\n",
+    "    aspect_perturb = [round(i, 2) for i in aspect_perturb]\n",
+    "    print(f'base_params after rounding: {base_params}')\n",
+    "    # make stl and record dirs if they don't exist\n",
+    "    record_dir = './temp_record'\n",
+    "    stl_dir = './temp_stl'\n",
+    "    os.makedirs(record_dir, exist_ok=True)\n",
+    "    os.makedirs(stl_dir, exist_ok=True)\n",
+    "    try: \n",
+    "        ros = create_ros(base_params, n_arms, s_code, aspect_perturb) # create ros object\n",
+    "        save_filename = f'ros-test-{id:06d}.stl'\n",
+    "        save_filepath = os.path.join(stl_dir, save_filename)\n",
+    "        print(f'saving to {save_filepath}')\n",
+    "        cq.exporters.export(ros, save_filepath) # save \n",
+    "        # create and save data record\n",
+    "        record = get_record(ros, params, id)\n",
+    "        record_filename = 'ros-data-res.txt'\n",
+    "        record_filepath = os.path.join(record_dir, record_filename)\n",
+    "        with open(record_filepath, 'a') as file:\n",
+    "            file.write(\",\".join(map(str, record)) + '\\n') \n",
+    "        if os.path.exists(save_filepath):\n",
+    "            print(f'--> Rosette {id} re-generated successfully!')\n",
+    "            print(f'recording data -> {record}')\n",
+    "        else:\n",
+    "            print(f'Rosette {id} was generated but not saved properly')\n",
+    "    except Exception as e:\n",
+    "        print(f'Rosette {id} not created, error: {e}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b49c18b0-38ac-4154-9a22-3b98b1be29f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2011,7 +2414,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83618807-2309-436e-b26d-cdb714bc27d5",
+   "id": "421a7949-c822-4692-a781-a2c479e4c2df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75bce385-8ce2-4278-ba8a-39d473d76804",
    "metadata": {},
    "outputs": [],
    "source": []
