--- a/notebooks/18-gen-data-from-projections.ipynb
+++ b/notebooks/18-gen-data-from-projections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0ed11116-1f10-486b-a5be-56187a17b897",
    "metadata": {},
    "outputs": [],
@@ -41,18 +41,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
+   "id": "3eafe143-570d-4b97-ad09-33fb9982d35e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[25.728020603569504,\n",
+       "  31.566005898898368,\n",
+       "  1.0559465112004924,\n",
+       "  0.9235238401447887,\n",
+       "  1.062846051511876,\n",
+       "  4],\n",
+       " [0.9870573750545488,\n",
+       "  1.025943071786323,\n",
+       "  0.9113414199644319,\n",
+       "  1.1182592305508643,\n",
+       "  0.9669323822842779,\n",
+       "  0.9578224808743632,\n",
+       "  1.141544895825053,\n",
+       "  1.1106086484807067],\n",
+       " [-0.1953923308982515,\n",
+       "  0.6997064796354285,\n",
+       "  -0.6871918795957528,\n",
+       "  0.348343425573144,\n",
+       "  0.8064503295756525,\n",
+       "  0.47780197130954655,\n",
+       "  -0.044999511612952896,\n",
+       "  -0.8384310002651846,\n",
+       "  0.5431468509978841,\n",
+       "  0.6665734794270578,\n",
+       "  -0.5996757346434333,\n",
+       "  -0.4427965783566583]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the JSON file\n",
+    "import json\n",
+    "params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
+    "with open(params_path, 'rb') as file:\n",
+    "    params = json.load(file)\n",
+    "params[75]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "73a9e6fa-cda7-425e-9c51-c1e6b9f877b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "base_folder = '/glade/derecho/scratch/joko/synth-ros/params_200_50-debug-20250316/projections'\n",
-    "ros_data = '/glade/derecho/scratch/joko/synth-ros/params_200_50-debug-20250316/data/ros-data-merged.txt'"
+    "ros_data = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/data/ros-data-merged.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "734b113a-a308-4be1-a6c9-4fc0ed305434",
    "metadata": {},
    "outputs": [
@@ -181,7 +232,7 @@
        "4  32892.678757  179534.751064  0.583751  0.142747  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,6 +241,114 @@
     "# read single image\n",
     "df_ros = pd.read_csv(ros_data)\n",
     "df_ros.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6458b504-9025-441d-bbba-1295ecfde1e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id           int64\n",
+       "a          float64\n",
+       "c          float64\n",
+       "f_r0       float64\n",
+       "f_hp       float64\n",
+       "f_h0       float64\n",
+       "n_arms       int64\n",
+       "sa         float64\n",
+       "vol        float64\n",
+       "sa_eff     float64\n",
+       "rho_eff    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ros.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "60ccda58-82a6-49d5-9377-116768d40ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>a</th>\n",
+       "      <th>c</th>\n",
+       "      <th>f_r0</th>\n",
+       "      <th>f_hp</th>\n",
+       "      <th>f_h0</th>\n",
+       "      <th>n_arms</th>\n",
+       "      <th>sa</th>\n",
+       "      <th>vol</th>\n",
+       "      <th>sa_eff</th>\n",
+       "      <th>rho_eff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>28123</th>\n",
+       "      <td>75</td>\n",
+       "      <td>25.728021</td>\n",
+       "      <td>31.566006</td>\n",
+       "      <td>1.055947</td>\n",
+       "      <td>0.923524</td>\n",
+       "      <td>1.062846</td>\n",
+       "      <td>4</td>\n",
+       "      <td>53832.477555</td>\n",
+       "      <td>495428.865713</td>\n",
+       "      <td>0.51989</td>\n",
+       "      <td>0.158128</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id          a          c      f_r0      f_hp      f_h0  n_arms  \\\n",
+       "28123  75  25.728021  31.566006  1.055947  0.923524  1.062846       4   \n",
+       "\n",
+       "                 sa            vol   sa_eff   rho_eff  \n",
+       "28123  53832.477555  495428.865713  0.51989  0.158128  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ros[df_ros['id']==75]"
    ]
   },
   {
@@ -637,8 +796,96 @@
    "id": "2d0cb703-a6d4-423c-9b26-2d6ad16d2c91",
    "metadata": {},
    "source": [
-    "It's too slow to generate path list using pythong. Use linux commands instead:  \n",
+    "It's too slow to generate path list using python. Use linux commands instead:  \n",
     "```find . -type f -name \"*.png\" > img_relative_paths.txt```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1857a24a-2c2b-4049-a97f-58fd237d7b6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-022282-000-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-020298-001-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-029536-001-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-020298-004-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-022415-004-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-027327-001-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-024274-005-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-022282-007-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-022415-007-phips.png',\n",
+       " '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-024274-007-phips.png']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os \n",
+    "projections_dir = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections'\n",
+    "img_paths_txt = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/img_relative_paths.txt'\n",
+    "with open(img_paths_txt, 'r') as file:\n",
+    "    rel_paths = [line.strip().replace('./','') for line in file]\n",
+    "    img_paths = [os.path.join(projections_dir, i) for i in rel_paths]\n",
+    "img_paths[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "525f6ec5-da8e-43cd-8602-c428af8823e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(img_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2b984843-e3b0-4e28-8312-3b822641294e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ros_id: 022282\n",
+      "proj_id: 000\n",
+      "unique_id: 022282_000\n",
+      "view: phips\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_path = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/projections/phips/6/ros-projection-022282-000-phips.png'\n",
+    "filename = test_path.rsplit('/',1)[1]\n",
+    "filename.split('-')\n",
+    "ros_id = filename.split('-')[2]\n",
+    "proj_id = filename.split('-')[3]\n",
+    "unique_id = ros_id + '_' + proj_id\n",
+    "view = filename.split('-')[-1].split('.')[0]\n",
+    "print(f'ros_id: {ros_id}')\n",
+    "print(f'proj_id: {proj_id}')\n",
+    "print(f'unique_id: {unique_id}')\n",
+    "print(f'view: {view}')"
    ]
   },
   {
