--- a/notebooks/23-png-to-zarr.ipynb
+++ b/notebooks/23-png-to-zarr.ipynb
@@ -2,62 +2,463 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "id": "3b1773d9-27f8-421e-9729-9065a1b40ffc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, shutil, random\n",
-    "import os\n",
     "import zarr\n",
     "import numpy as np\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "import dask.array as da\n",
     "from dask.diagnostics import ProgressBar\n",
-    "from dask.distributed import Client"
+    "from dask.distributed import Client\n",
+    "import cv2 as cv\n",
+    "from pathlib import Path\n",
+    "import numcodecs\n",
+    "from zarr.storage import LocalStore\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "93303143-fd0f-48bc-bdc1-06d5b6c5efda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(224, 224, 3)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/default/4'\n",
+    "file = 'ros-projection-000007-008-default.png'\n",
+    "img_path = os.path.join(root, file)\n",
+    "img = cv.imread(img_path)\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d71e5ea6-c547-41e6-9773-1da6718da026",
+   "metadata": {},
+   "source": [
+    "Notes on zarr v3:\n",
+    "- Lots of problems...may need to change when bugs are fixed with new iteration of zarr v3\n",
+    "- https://github.com/zarr-developers/zarr-python/issues/2964"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed70d589-306d-48c3-928d-8eb0b5538337",
+   "metadata": {},
+   "source": [
+    "# Test on n1000 subset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1d33d50-7c30-4a49-84a5-221f21b74a7b",
+   "metadata": {},
+   "source": [
+    "## a) no groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "68200c9e-53e7-424f-94e2-2e27585e34cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imgs2zarr(imgs, save_path):\n",
+    "    '''\n",
+    "    imgs: list of paths of images (e.g., pngs)\n",
+    "    save_path: where to save zarr array\n",
+    "    '''        \n",
+    "    # Load one image to get shape\n",
+    "    sample = np.array(Image.open(imgs[0]))\n",
+    "    img_shape = sample.shape\n",
+    "    # Create LocalStore for writing Zarr v3\n",
+    "    store = LocalStore(save_path)\n",
+    "    # Open the root group using Zarr v3\n",
+    "    root = zarr.open(store=store, mode=\"w\")\n",
+    "    # # Set up compression codec (Blosc in this case)\n",
+    "    # compression = numcodecs.Blosc(cname='zstd', clevel=3, shuffle=numcodecs.Blosc.SHUFFLE)\n",
+    "    # Create arrays\n",
+    "    images_arr = root.create_array(\n",
+    "        name=\"images\",\n",
+    "        shape=(len(imgs), *img_shape),\n",
+    "        chunks=(10, *img_shape),\n",
+    "        dtype=\"uint8\",\n",
+    "        compressors=[zarr.codecs.BloscCodec(cname=\"zstd\", clevel=3, shuffle=\"shuffle\")]\n",
+    "    )\n",
+    "    # Write data\n",
+    "    for i, path in enumerate(imgs):\n",
+    "        img = np.array(Image.open(path))\n",
+    "        images_arr[i] = img \n",
+    "    # save filenames as metadata\n",
+    "    root.attrs['filenames'] = [p.name for p in imgs]\n",
+    "    print(\"✅ Saved PNGs and filenames using Zarr v3 + LocalStore.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d74dbef5-2363-4e8c-9c9d-97424208b7b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating /glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/2ds.zarr...\n",
+      "✅ Saved PNGs and filenames using Zarr v3 + LocalStore.\n",
+      "creating /glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/default.zarr...\n",
+      "✅ Saved PNGs and filenames using Zarr v3 + LocalStore.\n",
+      "creating /glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/phips.zarr...\n",
+      "✅ Saved PNGs and filenames using Zarr v3 + LocalStore.\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000'\n",
+    "subfolders = ['2ds', 'default', 'phips']\n",
+    "for f in subfolders:\n",
+    "    data_dir = Path(os.path.join(root, f))\n",
+    "    png_files = list(data_dir.rglob('*.png'))\n",
+    "    save_filename = f'{f}.zarr'\n",
+    "    save_path = os.path.join(root, save_filename)\n",
+    "    print(f'creating {save_path}...')\n",
+    "    imgs2zarr(png_files, save_path=save_path) # save to zarr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "3647f3af-da09-4338-9892-f153738e067c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/2ds.zarr\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">/</span>\n",
+       "└── <span style=\"font-weight: bold\">images</span> (7000, 224, 224, 3) uint8\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m/\u001b[0m\n",
+       "└── \u001b[1mimages\u001b[0m (7000, 224, 224, 3) uint8\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<class 'str'>\n",
+      "/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/default.zarr\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">/</span>\n",
+       "└── <span style=\"font-weight: bold\">images</span> (7000, 224, 224, 3) uint8\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m/\u001b[0m\n",
+       "└── \u001b[1mimages\u001b[0m (7000, 224, 224, 3) uint8\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<class 'str'>\n",
+      "/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/phips.zarr\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">/</span>\n",
+       "└── <span style=\"font-weight: bold\">images</span> (7000, 224, 224, 3) uint8\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m/\u001b[0m\n",
+       "└── \u001b[1mimages\u001b[0m (7000, 224, 224, 3) uint8\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check zarr files\n",
+    "root = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000'\n",
+    "subfolders = ['2ds', 'default', 'phips']\n",
+    "for f in subfolders:\n",
+    "    zarr_file = f'{f}.zarr'\n",
+    "    print(type(zarr_file))\n",
+    "    zarr_path = os.path.join(root, zarr_file)\n",
+    "    print(zarr_path)\n",
+    "    store = LocalStore(zarr_path)\n",
+    "    zarr_root = zarr.open(store, mode='r')\n",
+    "    print(zarr_root.tree())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4148ef65-e40b-4b0e-95a8-461b7beadff8",
+   "metadata": {},
+   "source": [
+    "## b) split into train/val/test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c224ed1d-79af-47a9-9a69-dc3c6bdd8e9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imgs2zarr_split(imgs, save_path, train_size=0.7, val_size=0.15, test_size=0.15):\n",
+    "    '''\n",
+    "    imgs: list of paths of images (e.g., pngs)\n",
+    "    save_path: where to save zarr array\n",
+    "    train_size: proportion of data to be used for training\n",
+    "    val_size: proportion of data to be used for validation\n",
+    "    test_size: proportion of data to be used for testing\n",
+    "    '''        \n",
+    "    # Load one image to get shape\n",
+    "    sample = np.array(Image.open(imgs[0]))\n",
+    "    img_shape = sample.shape\n",
+    "    \n",
+    "    # Create LocalStore for writing Zarr v3\n",
+    "    store = LocalStore(save_path)\n",
+    "    \n",
+    "    # Open the root group using Zarr v3\n",
+    "    root = zarr.open(store=store, mode=\"w\")\n",
+    "    \n",
+    "    # Split the data into training, validation, and test sets\n",
+    "    train_imgs, temp_imgs = train_test_split(imgs, train_size=train_size)\n",
+    "    val_imgs, test_imgs = train_test_split(temp_imgs, train_size=val_size / (val_size + test_size))  # Adjust for combined size\n",
+    "    \n",
+    "    # Function to create arrays for each split\n",
+    "    def create_split_array(name, img_paths):\n",
+    "        img_shape = np.array(Image.open(img_paths[0])).shape\n",
+    "        arr = root.create_array(\n",
+    "            name=name,\n",
+    "            shape=(len(img_paths), *img_shape),\n",
+    "            chunks=(10, *img_shape),\n",
+    "            dtype=\"uint8\",\n",
+    "            compressors=[zarr.codecs.BloscCodec(cname=\"zstd\", clevel=3, shuffle=\"shuffle\")]\n",
+    "        )\n",
+    "        for i, path in enumerate(img_paths):\n",
+    "            img = np.array(Image.open(path))\n",
+    "            arr[i] = img\n",
+    "        return arr\n",
+    "    \n",
+    "    # Create arrays for each split\n",
+    "    train_arr = create_split_array(\"train\", train_imgs)\n",
+    "    val_arr = create_split_array(\"val\", val_imgs)\n",
+    "    test_arr = create_split_array(\"test\", test_imgs)\n",
+    "    \n",
+    "    # Save filenames as metadata for each split\n",
+    "    root.attrs['train_filenames'] = [os.path.basename(p) for p in train_imgs]\n",
+    "    root.attrs['val_filenames'] = [os.path.basename(p) for p in val_imgs]\n",
+    "    root.attrs['test_filenames'] = [os.path.basename(p) for p in test_imgs]\n",
+    "    \n",
+    "    print(\"✅ Saved PNGs into training, validation, and test splits using Zarr v3 + LocalStore.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "252e74d3-5b89-41e3-a5d8-274546abc1ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creating /glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/2ds-split.zarr...\n",
+      "✅ Saved PNGs into training, validation, and test splits using Zarr v3 + LocalStore.\n",
+      "creating /glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/default-split.zarr...\n",
+      "✅ Saved PNGs into training, validation, and test splits using Zarr v3 + LocalStore.\n",
+      "creating /glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/phips-split.zarr...\n",
+      "✅ Saved PNGs into training, validation, and test splits using Zarr v3 + LocalStore.\n",
+      "CPU times: user 2min 21s, sys: 12.9 s, total: 2min 34s\n",
+      "Wall time: 3min 20s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "root = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000'\n",
+    "subfolders = ['2ds', 'default', 'phips']\n",
+    "for f in subfolders:\n",
+    "    data_dir = Path(os.path.join(root, f))\n",
+    "    png_files = list(data_dir.rglob('*.png'))\n",
+    "    save_filename = f'{f}-split.zarr'\n",
+    "    save_path = os.path.join(root, save_filename)\n",
+    "    print(f'creating {save_path}...')\n",
+    "    imgs2zarr_split(png_files, save_path=save_path, \n",
+    "                    train_size=0.7, val_size=0.15, test_size=0.15) # save to zarr with splits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "9181eafc-5b9f-42ab-b5a5-3823c76a844a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/2ds-split.zarr\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">/</span>\n",
+       "├── <span style=\"font-weight: bold\">test</span> (1050, 224, 224, 3) uint8\n",
+       "├── <span style=\"font-weight: bold\">train</span> (4900, 224, 224, 3) uint8\n",
+       "└── <span style=\"font-weight: bold\">val</span> (1050, 224, 224, 3) uint8\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m/\u001b[0m\n",
+       "├── \u001b[1mtest\u001b[0m (1050, 224, 224, 3) uint8\n",
+       "├── \u001b[1mtrain\u001b[0m (4900, 224, 224, 3) uint8\n",
+       "└── \u001b[1mval\u001b[0m (1050, 224, 224, 3) uint8\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<class 'str'>\n",
+      "/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/default-split.zarr\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">/</span>\n",
+       "├── <span style=\"font-weight: bold\">test</span> (1050, 224, 224, 3) uint8\n",
+       "├── <span style=\"font-weight: bold\">train</span> (4900, 224, 224, 3) uint8\n",
+       "└── <span style=\"font-weight: bold\">val</span> (1050, 224, 224, 3) uint8\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m/\u001b[0m\n",
+       "├── \u001b[1mtest\u001b[0m (1050, 224, 224, 3) uint8\n",
+       "├── \u001b[1mtrain\u001b[0m (4900, 224, 224, 3) uint8\n",
+       "└── \u001b[1mval\u001b[0m (1050, 224, 224, 3) uint8\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<class 'str'>\n",
+      "/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000/phips-split.zarr\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">/</span>\n",
+       "├── <span style=\"font-weight: bold\">test</span> (1050, 224, 224, 3) uint8\n",
+       "├── <span style=\"font-weight: bold\">train</span> (4900, 224, 224, 3) uint8\n",
+       "└── <span style=\"font-weight: bold\">val</span> (1050, 224, 224, 3) uint8\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m/\u001b[0m\n",
+       "├── \u001b[1mtest\u001b[0m (1050, 224, 224, 3) uint8\n",
+       "├── \u001b[1mtrain\u001b[0m (4900, 224, 224, 3) uint8\n",
+       "└── \u001b[1mval\u001b[0m (1050, 224, 224, 3) uint8\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check zarr files\n",
+    "root = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/subset_n1000'\n",
+    "subfolders = ['2ds', 'default', 'phips']\n",
+    "for f in subfolders:\n",
+    "    zarr_file = f'{f}-split.zarr'\n",
+    "    print(type(zarr_file))\n",
+    "    zarr_path = os.path.join(root, zarr_file)\n",
+    "    print(zarr_path)\n",
+    "    store = LocalStore(zarr_path)\n",
+    "    zarr_root = zarr.open(store, mode='r')\n",
+    "    print(zarr_root.tree())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed6528f-792b-452e-acbb-fce462639afa",
+   "id": "f03184f7-68e9-418b-bc0c-05b895d62392",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# make a small subset of img dataset for testing \n",
-    "# Define source and destination directories\n",
-    "# source_dir = \"/glade/derecho/scratch/joko/synth-ros/params_200_50-debug-20250316/projections\"\n",
-    "# destination_dir = \"/glade/derecho/scratch/joko/synth-ros/params_200_50_small_subset/projections\"\n",
-    "\n",
-    "# # Define the number of PNGs to keep per folder (adjust as needed)\n",
-    "# num_keep = 10  # Change this value to set the subset size\n",
-    "\n",
-    "# # Ensure destination directory exists\n",
-    "# os.makedirs(destination_dir, exist_ok=True)\n",
-    "\n",
-    "# # Loop through subdirectories\n",
-    "# for subdir in os.listdir(source_dir):\n",
-    "#     subdir_path = os.path.join(source_dir, subdir)\n",
-    "#     dest_subdir_path = os.path.join(destination_dir, subdir)\n",
-    "\n",
-    "#     if os.path.isdir(subdir_path):  # Check if it's a directory\n",
-    "#         os.makedirs(dest_subdir_path, exist_ok=True)  # Create corresponding subdir\n",
-    "\n",
-    "#         # Get list of PNG files in the current subdir\n",
-    "#         png_files = [f for f in os.listdir(subdir_path) if f.lower().endswith(\".png\")]\n",
-    "\n",
-    "#         # Select a random subset\n",
-    "#         selected_files = random.sample(png_files, min(num_keep, len(png_files)))\n",
-    "\n",
-    "#         # Copy selected files to the destination\n",
-    "#         for file in selected_files:\n",
-    "#             src_file_path = os.path.join(subdir_path, file)\n",
-    "#             dest_file_path = os.path.join(dest_subdir_path, file)\n",
-    "#             shutil.copy2(src_file_path, dest_file_path)\n",
-    "\n",
-    "# print(f\"✅ Successfully copied a random subset of PNG files to {destination_dir}\")\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -114,6 +515,14 @@
     "images_np = np.stack(image_list, axis=0)\n",
     "images_np.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aad9d411-4429-49b4-9b77-559a1a153377",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
